--- a/aspectj-app/build.gradle
+++ b/aspectj-app/build.gradle
@@ -28,6 +28,17 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
+    lintOptions {
+        abortOnError false
+    }
+
+    compileOptions {
+        //Error: Static interface methods are only supported starting with Android N (--min-api 24)
+        //add java 1.8 resolve
+        sourceCompatibility rootProject.ext.java.sourceCompatibility
+        targetCompatibility rootProject.ext.java.targetCompatibility
+    }
 }
 
 dependencies {
