--- a/config.gradle
+++ b/config.gradle
@@ -16,7 +16,7 @@ ext {
     applicationId = "com.lugeek.androidaopdemo"
 
     dependencies = [
-            "appcompat"                 : 'androidx.appcompat:appcompat:1.2.0',
+            "appcompat"                 : 'androidx.appcompat:appcompat:1.+',
             "annotations"               : 'com.android.support:support-annotations:28.0.0',
             "auto_service"              : 'com.google.auto.service:auto-service:1.0-rc7',
             "javapoet"                  : 'com.squareup:javapoet:1.10.0',
